# tonic-iroh-transport

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/chat/: Cargo.toml  README.md  benchmark.sh  benchmark_test.sh  build.rs
examples/chat/proto/: chat_service.proto  common.proto  node_service.proto  p2p_chat.proto
examples/chat/proto/p2p_chat/v1/: chat_service.proto  common.proto  node_service.proto
examples/chat/src/: main.rs
examples/chat/src/pb/: mod.rs  p2p_chat.rs  p2p_chat.v1.rs
examples/echo/: Cargo.toml  README.md  build.rs
examples/echo/proto/: echo.proto
examples/echo/proto/echo/v1/: echo.proto
examples/echo/src/: main.rs
examples/echo/src/pb/: echo.rs  echo.v1.rs  mod.rs
src/: alpn.rs  channel.rs  client.rs  error.rs  gossip.rs  lib.rs  otel.rs  pool.rs  rpc.rs  server.rs  stream.rs  transport.rs  user_data.rs
src/mainline_discovery/: discovery.rs  mod.rs  publisher.rs  record.rs  topic.rs
src/swarm/: connect.rs  discovery.rs  engine.rs  locator.rs  mod.rs  peers.rs  record.rs  registry.rs  stream.rs
src/swarm/dht/: backend.rs  keys.rs  mod.rs  publisher.rs  resolver.rs
tests/: grpc_interop.rs  integration.rs  typed_client_integration.rs
tests/pb/: interop.v1.rs
