[package]
name = "tonic-iroh-transport"
authors = ["George Whewell <george@hellas.ai>"]
version = "0.2.0"
edition = "2021"
description = "Transport layer for using tonic gRPC over iroh p2p connections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hellas-ai/tonic-iroh"
keywords = ["grpc", "p2p", "iroh", "tonic", "transport"]
categories = ["network-programming", "api-bindings"]

[package.metadata.release]
allow-branch = ["master"]
pre-release-hook = ["make", "all"]

[features]
default = ["client", "server"]
client = [
    "dep:http",
    "dep:hyper-util",
    "dep:tokio",
    "dep:tower",
    "tonic/codegen",
    "tonic/channel",
    "tonic/transport",
]
server = [
    "dep:axum",
    "dep:http",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tower",
    "tonic/codegen",
    "tonic/router",
    "tonic/server",
    "tonic/transport",
]
discovery = [
    "client",
    "dep:tokio-stream",
    "iroh/address-lookup-mdns",
    "iroh/address-lookup-pkarr-dht",
    "dep:mainline",
    "dep:sha2",
    "dep:async-stream",
    "dep:serde",
    "dep:postcard",
]

[dependencies]
iroh = { version = "0.96" }
tonic = { version = "0.14", default-features = false }
tokio = { version = "1", default-features = false, optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
http = { version = "1.4", default-features = false, optional = true }
hyper-util = { version = "0.1", default-features = false, optional = true }
tower = { version = "0.4", features = ["util"], default-features = false, optional = true }
futures-util = { version = "0.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
bytes = { version = "1.8", default-features = false }
axum = { version = "0.8", default-features = false, optional = true }

# Mainline DHT discovery dependencies (optional)
mainline = { version = "6", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
async-stream = { version = "0.3", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
postcard = { version = "1", optional = true, features = ["alloc"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
test-log = "0.2"
cargo-release = "0.25"

# Example dependencies
clap = { version = "4.5", features = ["derive"] }
prost = "0.14"
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"
