[package]
name = "tonic-iroh-transport"
authors = ["George Whewell <george@hellas.ai>"]
version = "0.9.0"
edition = "2021"
description = "Transport layer for using tonic gRPC over iroh p2p connections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hellas-ai/tonic-iroh"
keywords = ["grpc", "p2p", "iroh", "tonic", "transport"]
categories = ["network-programming", "api-bindings"]

[package.metadata.release]
allow-branch = ["master"]
pre-release-hook = ["make", "all"]

[features]
default = ["client", "server", "native-defaults"]

# Forwards iroh's native-only default features. Native consumers get these
# implicitly via `default = [...]`; wasm consumers drop them by setting
# `default-features = false` on this crate and either re-enabling
# `native-defaults` or configuring a custom rustls `CryptoProvider` via
# `iroh::endpoint::Builder::crypto_provider`.
native-defaults = [
    "iroh/tls-ring",
    "iroh/portmapper",
    "iroh/metrics",
    "iroh/fast-apple-datapath",
]
client = [
    "dep:h2",
    "dep:http",
    "dep:http-body",
    "dep:n0-future",
    "dep:tokio",
    "dep:tower",
    "tonic/codegen",
]
server = [
    "dep:axum",
    "dep:data-encoding",
    "dep:http",
    "dep:n0-future",
    "dep:postcard",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tower",
    "tonic/codegen",
    "tonic/router",
    "tonic/server",
    "tonic/transport",
]
discovery = [
    "client",
    "dep:tokio-stream",
    "tokio-stream/sync",
    "tokio/sync",
]
discovery-mdns = [
    "discovery",
    "iroh/address-lookup-mdns",
    "dep:data-encoding",
    "dep:postcard",
    "dep:async-stream",
]
discovery-dht = [
    "discovery",
    "iroh/address-lookup-pkarr-dht",
    "dep:mainline",
    "dep:sha2",
    "dep:async-stream",
    "dep:serde",
    "dep:postcard",
]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
iroh = { version = "0.98.1", default-features = false }
tonic = { version = "0.14", default-features = false }
tokio = { version = "1", default-features = false, optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
h2 = { version = "0.4", optional = true }
http = { version = "1.4", default-features = false, optional = true }
http-body = { version = "1", optional = true }
n0-future = { version = "0.3", optional = true }
tower = { version = "0.5", default-features = false, optional = true }
futures-util = { version = "0.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
bytes = { version = "1.11", default-features = false }
axum = { version = "0.8", default-features = false, optional = true }
data-encoding = { version = "2.11", default-features = false, optional = true }

# Mainline DHT discovery dependencies (optional)
mainline = { version = "6", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
async-stream = { version = "0.3", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
postcard = { version = "1", optional = true, features = ["alloc"] }
opentelemetry = { version = "0.31", optional = true, default-features = false, features = ["trace"] }
tracing-opentelemetry = { version = "0.32", optional = true, default-features = false }

[dev-dependencies]
tonic-prost = "0.14"
tokio-test = "0.4"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
test-log = "0.2"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }

# Example dependencies
clap = { version = "4.5", features = ["derive"] }
prost = "0.14"
tokio-stream = "0.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
