[package]
name = "tonic-iroh-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2p-chat"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = "0.1"
tonic = { version = "0.14" }
tonic-prost = "0.14"
prost = "0.14"
iroh = { version = "0.95" }
tonic-iroh-transport = { path = "../.." }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"
